Stop jumping

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -15,6 +15,7 @@ body {
   background: #eeebe3;
   color: $base-color;
   font-family: $base-font;
+  overflow-y:scroll;
 }
 
 h1, h2, h3, h4, h5, h6 {
